--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@ function submitAnswer7(choice) {
     <!-- 結果 -->
 
     <div id="resultPage" class="hidden">
-        <p>出席番号: <span id="resultAttendanceNumber"></span></p>
+        <p>番号: <span id="resultAttendanceNumber"></span></p>
         <p>1: <span id="resultTimeTaken31"></span></p>
         <p>2: <span id="resultTimeTaken32"></span></p>
         <p>3: <span id="resultTimeTaken33"></span></p>
