--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p id="wordDisplay1"></p>
         <div class="buttonContainer1">
             <button onclick="submitAnswer1('自分')">自分</button>
-            <button onclick="submitAnswer1('他者')">他人</button>
+            <button onclick="submitAnswer1('他者')">他者</button>
         </div>
     </div>
 
