--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,10 @@ function submitAnswer7(choice) {
         <p>51: <span id="resultTimeTaken712"></span></p>
         <p>52: <span id="resultTimeTaken713"></span></p>
 
-       
+       <p>↑ここより上をコピーして、グーグルフォームにペーストして送信してください。</p>
+        <p>　→　</p>
+        <p>提出はこちらから→<a href="https://forms.gle/MKds269bAogxDn2v8">提出用Googleフォーム</a></p>
+        <p>うまくいかない人は３つ目のQRコードを読み取って提出してください</p>
     </div>
 
     <script>
