--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <script>
         let currentWordIndex1 = 0;
         var wordList1 = [
-            { word: "あなた", correctChoice: "自分" },
+            { word: "あなた", correctChoice: "他者" },
             { word: "教師", correctChoice: "他者" },
             { word: "生徒", correctChoice: "自分" },
             { word: "私たち", correctChoice: "自分" },
