--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             display: none;
         }
     </style>
+
+#indexPage {
+font-size: 170%; /* 適切なサイズに変更 */
+}
+
 </head>
 <body>
     
