--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 .hidden {
             display: none;
         }
-        #indexPage {
-font-size: 170%; /* 適切なサイズに変更 */
+        .indexPage {
+font-size: 170; /* 適切なサイズに変更 */
 }
     </style>
 
