--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 .hidden {
             display: none;
         }
-        .indexPage {
+#indexPage {
 font-size: 170; /* 適切なサイズに変更 */
 }
     </style>
