--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             display: none;
         }
 #indexPage {
-font-size: 170; /* 適切なサイズに変更 */
+font-size: 170%; /* 適切なサイズに変更 */
 }
     </style>
 
