--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@ font-size: 170%; /* 適切なサイズに変更 */
 .hidden {
             display: none;
         }
+        
+#indexPage input {
+    width: 200%; /* 任意の幅を指定 */
+    height: 30%; /* 任意の高さを指定 */
+    font-size: 16%; /* 任意のフォントサイズを指定 */
+}
 
     </style>
 
