--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiment - Index</title>
     <style>
-   #indexPage {
-font-size: 170%; /* 適切なサイズに変更 */
+    #indexPage {
+    font-size: 150%; 
+    }
+#indexPage button {
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 18px; /* 任意のフォントサイズを指定 */
 }
-.hidden {
-            display: none;
-        }
-        
+
 #indexPage input {
-    width: 200%; /* 任意の幅を指定 */
-    height: 30%; /* 任意の高さを指定 */
-    font-size: 16%; /* 任意のフォントサイズを指定 */
+    width: 200px; /* 任意の幅を指定 */
+    height: 30px; /* 任意の高さを指定 */
+    font-size: 16px; /* 任意のフォントサイズを指定 */
 }
+
 
     </style>
 
