--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     font-size: 150%; 
     }
 #indexPage button {
-    padding: 15px 30px; /* 任意のパディングを指定 */
-    font-size: 18px; /* 任意のフォントサイズを指定 */
+    padding: 15px 15px; 
+    font-size: 30px; 
 }
 
 #indexPage input {
-    width: 200px; /* 任意の幅を指定 */
-    height: 30px; /* 任意の高さを指定 */
-    font-size: 16px; /* 任意のフォントサイズを指定 */
+    width: 100px; 
+    height: 30px;
+    font-size: 30px;
 }
 
 
