--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     font-size: 150%; 
     }
 
+        #indexPage input {
+    width: 200px; /* 任意の幅を指定 */
+    height: 30px; /* 任意の高さを指定 */
+    font-size: 16px; /* 任意のフォントサイズを指定 */
+}
+
     </style>
 
 
