--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     height: 30px; /* 任意の高さを指定 */
     font-size: 16px; /* 任意のフォントサイズを指定 */
 }
+        #indexPage button {
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 18px; /* 任意のフォントサイズを指定 */
+}
 
     </style>
 
