--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
             display: none;
         }
 #indexPage {
-    font-size: 150%; 
+    font-size: 100%; 
     }
 
         #indexPage input {
-    width: 200px; /* 任意の幅を指定 */
-    height: 30px; /* 任意の高さを指定 */
-    font-size: 16px; /* 任意のフォントサイズを指定 */
+    width: 200px; 
+    height: 30px; 
+    font-size: 16px; 
 }
         #indexPage button {
-    padding: 30px 40px; /* 任意のパディングを指定 */
+    padding: 15px 40px; /* 任意のパディングを指定 */
     font-size: 18px; /* 任意のフォントサイズを指定 */
 }
 
@@ -34,7 +34,7 @@
     <!-- インデックス -->
 
     <div id="indexPage">
-        <label for="attendance_number">あなたの番号を入力してください</label>
+        <label for="attendance_number">あなたの番号を入力してください<br></label>
         <input type="text" id="attendance_number" required>
         <button onclick="showInstructions1()">次に進む</button>
     </div>
