--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     .hidden {
             display: none;
         }
+    #indexPage {
+    margin-top: 20px; /* 任意の余白を指定 */
+　　　　　　　　font-size: 120%; 
+}
+        
 #indexPage {
-    font-size: 100%; 
+    
     }
 
         #indexPage input {
