--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     font-size: 18px; /* 任意のフォントサイズを指定 */
 }
 
+    
+    #instructionsPage1 button {
+    
+    padding: 15px 40px; /* 任意のパディングを指定 */
+    font-size: 18px; /* 任意のフォントサイズを指定 */
+}
+        #countdownPage1 {
+
+　　　　　　　　font-size: 120%; 
+}
+
     </style>
 
 
