--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: none;
         }
     #indexPage {
-
+ margin-top: 100px; /* 任意の余白を指定 */
 　　　　　　　　font-size: 120%; 
 }
         
