--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 
         #indexPage input {
-            
+    　margin-top: 10px; /* 任意の余白を指定 */        
     width: 200px; 
     height: 30px; 
     font-size: 16px; 
 }
         #indexPage button {
-           
+    　margin-top: 10px; /* 任意の余白を指定 */       
     padding: 15px 40px; /* 任意のパディングを指定 */
     font-size: 18px; /* 任意のフォントサイズを指定 */
 }
@@ -37,6 +37,7 @@
 }
         #countdownPage1 {
     margin-top: 100px; /* 任意の余白を指定 */
+    margin-left: 50px
 　　　　　　　　font-size: 200px; 
 }
 
