--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
 　　　　　　　　font-size: 200px; 
 }
 
+
+ #wordDisplay1 {
+  　　　　margin-top: 100px; /* 任意の余白を指定 */
+　　　　　　　　font-size: 120px; 
+}
+        
+
+
+       
+        .buttonContainer1 {
+    　margin-top: 10px; /* 任意の余白を指定 */       
+    padding: 15px 40px; /* 任意のパディングを指定 */
+    font-size: 18px; /* 任意のフォントサイズを指定 */
+}
     </style>
 
 
