--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     padding: 15px 40px; /* 任意のパディングを指定 */
     font-size: 18px; /* 任意のフォントサイズを指定 */
 }
-        #countdownPage1 {
+        #countdown1 {
     margin-top: 100px; /* 任意の余白を指定 */
     margin-left: 100px
 　　　　　　　　font-size: 200px; 
