--- a/index.html
+++ b/index.html
@@ -6,11 +6,252 @@
     <title>Experiment - Index</title>
     <style>
     
-
     .hidden {
             display: none;
         }
 
+
+    #indexPage {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 10px;
+    font-size: 20px; /* 任意のフォントサイズを指定 */
+        }        
+    #indexPage input {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 18px; /* 任意のフォントサイズを指定 */
+        }
+    #indexPage button {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+
+     }
+
+     #instructionsPage1 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 10px;
+    font-size: 20px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #instructionsPage1 button {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+
+     }
+     #countdown1 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 100px;
+    font-size: 80px; /* 任意のフォントサイズを指定 */
+        }    
+
+    #wordDisplay1 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 85px;
+    font-size: 40px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #testPage1 button {
+        margin-top: 5px;
+        margin-left: 30px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+    }
+
+    #instructionsPage2 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 10px;
+    font-size: 20px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #instructionsPage2 button {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+
+     }
+     #countdown2 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 100px;
+    font-size: 80px; /* 任意のフォントサイズを指定 */
+        }    
+
+    #wordDisplay2 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 85px;
+    font-size: 40px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #testPage2 button {
+        margin-top: 5px;
+        margin-left: 30px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+    }
+    #instructionsPage3 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 10px;
+    font-size: 20px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #instructionsPage3 button {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+
+     }
+     #countdown3 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 100px;
+    font-size: 80px; /* 任意のフォントサイズを指定 */
+        }    
+
+    #wordDisplay3 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 85px;
+    font-size: 40px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #testPage3 button {
+        margin-top: 5px;
+        margin-left: 30px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+    }
+    #instructionsPage4 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 10px;
+    font-size: 20px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #instructionsPage4 button {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+
+     }
+     #countdown4 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 100px;
+    font-size: 80px; /* 任意のフォントサイズを指定 */
+        }    
+
+    #wordDisplay4 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 85px;
+    font-size: 40px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #testPage4 button {
+        margin-top: 5px;
+        margin-left: 30px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+    }
+
+    #instructionsPage5 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 10px;
+    font-size: 20px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #instructionsPage5 button {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+
+     }
+     #countdown5 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 100px;
+    font-size: 80px; /* 任意のフォントサイズを指定 */
+        }    
+
+    #wordDisplay5 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 85px;
+    font-size: 40px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #testPage5 button {
+        margin-top: 5px;
+        margin-left: 30px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+    }
+
+    #instructionsPage6 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 10px;
+    font-size: 20px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #instructionsPage6 button {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+
+     }
+     #countdown6 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 100px;
+    font-size: 80px; /* 任意のフォントサイズを指定 */
+        }    
+
+    #wordDisplay6 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 85px;
+    font-size: 40px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #testPage6 button {
+        margin-top: 5px;
+        margin-left: 30px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+    }
+
+    #instructionsPage7 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 10px;
+    font-size: 20px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #instructionsPage7 button {
+        margin-top: 10px;
+        margin-left: 10px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+
+     }
+     #countdown7 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 100px;
+    font-size: 80px; /* 任意のフォントサイズを指定 */
+        }    
+
+    #wordDisplay7 {
+    margin-top: 100px; /* 任意のパディングを指定 */
+    margin-left: 85px;
+    font-size: 40px; /* 任意のフォントサイズを指定 */
+        }        
+   
+    #testPage7 button {
+        margin-top: 5px;
+        margin-left: 30px;
+    padding: 15px 30px; /* 任意のパディングを指定 */
+    font-size: 19px; /* 任意のフォントサイズを指定 */
+    }
+        
     </style>
 
 
