--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <script>
         let currentWordIndex1 = 0;
         var wordList1 = [
-            { word: "あなた", correctChoice: "他者" },
+            { word: "彼ら", correctChoice: "他者" },
             { word: "教師", correctChoice: "他者" },
             { word: "生徒", correctChoice: "自分" },
             { word: "私たち", correctChoice: "自分" },
@@ -617,8 +617,8 @@
 <div id="testPage3" class="hidden">
     <p id="wordDisplay3"></p>
     <div class="buttonContainer3">
-        <button onclick="submitAnswer3('自分  攻撃的')">自分  攻撃的</button>
-        <button onclick="submitAnswer3('他者  友好的')">他者  友好的</button>
+        <button onclick="submitAnswer3('自分  攻撃的')">自分<br>攻撃的</button>
+        <button onclick="submitAnswer3('他者  友好的')">他者<br>友好的</button>
     </div>
 </div>
 
@@ -762,8 +762,8 @@ function submitAnswer3(choice) {
 <div id="testPage4" class="hidden">
     <p id="wordDisplay4"></p>
     <div class="buttonContainer4">
-        <button onclick="submitAnswer4('自分  攻撃的')">自分  攻撃的</button>
-        <button onclick="submitAnswer4('他者  友好的')">他者  友好的</button>
+        <button onclick="submitAnswer4('自分  攻撃的')">自分<br>攻撃的</button>
+        <button onclick="submitAnswer4('他者  友好的')">他者<br>友好的</button>
     </div>
 </div>
 
@@ -1047,8 +1047,8 @@ function submitAnswer5(choice) {
 <div id="testPage6" class="hidden">
     <p id="wordDisplay6"></p>
     <div class="buttonContainer6">
-        <button onclick="submitAnswer6('自分  友好的')">自分  友好的</button>
-        <button onclick="submitAnswer6('他者  攻撃的')">他人  攻撃的</button>
+        <button onclick="submitAnswer6('自分  友好的')">自分<br>友好的</button>
+        <button onclick="submitAnswer6('他者  攻撃的')">他人<br>攻撃的</button>
     </div>
 </div>
 
@@ -1188,8 +1188,8 @@ function submitAnswer6(choice) {
 <div id="testPage7" class="hidden">
     <p id="wordDisplay7"></p>
     <div class="buttonContainer7">
-        <button onclick="submitAnswer7('自分  友好的')">自分  友好的</button>
-        <button onclick="submitAnswer7('他者  攻撃的')">他人  攻撃的</button>
+        <button onclick="submitAnswer7('自分  友好的')">自分<br>友好的</button>
+        <button onclick="submitAnswer7('他者  攻撃的')">他人<br>攻撃的</button>
     </div>
 </div>
 
